bugfix: home report images were unaligned

--- a/styles/inline.css
+++ b/styles/inline.css
@@ -608,6 +608,8 @@ p.login-error-message {
     width: 100%;
     height: 100%;
     position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .tile-blur #report-description {
